hydroflow/tests/compile-fail/surface_lattice_fold_badgeneric.stderr
error: `lattice_fold` should have exactly 0 generic type arguments, actually has 1.
 --> tests/compile-fail/surface_lattice_fold_badgeneric.rs:4:31
  |
4 |             -> lattice_fold::<'static, usize>(Default::default())
  |                               ^^^^^^^^^^^^^^
